--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,16 @@
 *.kicad_prl
 *.sch-bak
 *~
+~*.lck
+.~lock*
 _autosave-*
 *.tmp
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+sym-lib-table
+fp-lib-table
+\#auto_saved_files\#
 
 # Netlist files (exported from Eeschema)
 *.net
